== v0.11.0
	- no longer log from trap(…) block.
	the logger cannot log from within a trap block on Ruby2, so I've removed
	logging when a subprocess gets a request to shutdown.

	- call 'setup' on unit of work if defined.
	'setup', if defined by a unit of work, is called just before a unit of work
	is executed for the first time… useful if you need to create an environment
	for the subprocess to operate in.

	- resize & resize! no longer accepts a Range.
	deprecated in the last release, support for a Range to either resize or
	resize! is completely removed in this release. Please use a Fixnum instead.

== v0.10.1
	- Restarted subprocesses inherit the message queue of their predecessor.
	when a failed subprocess is restarted its message queue is inherited by its
	replacement. Any messages it had waiting will be processed by the replacement
	process.

== v0.10.0
	- default to two subprocesses if CPU core count cannot be guessed.
	Which is change from the old default of five.

	- add ZPool#resize
	Resize the pool at runtime.
	If subprocesses are removed from the pool a graceful shutdown is performed on
	each subprocess that is removed (unlike resize!, which forces a shutdown).

	- add ZPool#expand
	Expand the pool with X subprocesses, where X is the argument to expand(…).

	- add ZPool#shrink
	Shrink the pool by X subprocesses, where X is the argument to shrink(…).
	A graceful shutdown is performed on any subprocesses removed from the pool.

	- add ZPool#shrink!
	Shrink the pool by X subprocesses, where X is the argument to shrink!(…)
	A forceful shutdown is performed on any subprocesses removed from the pool.

	- ZPool#resize! now accepts a Fixnum, not a Range.
	If you want to resize the pool to two subprocesses, the API is now:
	pool.resize!(2)

	- ZPool#failed_processes persists after a shutdown
	If a process in the pool has failed and the pool is subsequently shutdown the
	failed process will remain in ZPool#failed_processes. When a failed process